--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <nav id="navbar" class="navbar">
         <ul>
          
-          <li class="dropdown"><a href="#">Services <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="services.html">Services <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Iot</a></li>
               <li><a href="#">AI</a></li>
